# PortableApps-Without-Punishment

./: .gitignore  README.md  SPECIFICATION.md  silent-patch.bat  test-installer.bat
c-src/: PALTransparentWrapper.c  PALTransparentWrapper_Final.c  PALTransparentWrapper_v2.c  PALTransparentWrapper_v3.c  UniversalLauncher.c
docs/: BUILD.md
go-src/: replacer.go
installer/: installer.nsi
rust-src/: Cargo.toml
rust-src/.cargo/: config.toml
rust-src/replacer/: Cargo.toml
rust-src/replacer/src/: main.rs
rust-src/restore-punishment/: Cargo.toml
rust-src/restore-punishment/src/: main.rs
rust-src/universal-launcher/: Cargo.toml  build.rs
rust-src/universal-launcher/src/: main.rs
