[workspace]
members = ["universal-launcher", "replacer", "restore-punishment"]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0"
walkdir = "2.5"
regex = "1.10"
winapi = { version = "0.3", features = ["winuser", "processthreadsapi", "handleapi", "fileapi", "errhandlingapi", "shellapi", "winbase"] }
glob = "0.3"
winres = "0.1"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"