[package]
name = "universal-launcher"
version = "1.0.0"
edition = "2021"

[target.'cfg(windows)'.build-dependencies]
winres = { workspace = true }

[[bin]]
name = "universal-launcher"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
walkdir = { workspace = true }
glob = { workspace = true }

[target.'cfg(windows)'.dependencies]
winapi = { workspace = true }

